# musik

./: .gitignore  .gitmodules  Cargo.toml  README.md  build.c  build.zig  build.zig.zon  nob.c
include/: musik.h
src/: Music.zig  Musik.zig  Renderer.zig  commands.zlap  main.c  main.rs  main.zig  music_player.c  music_player.h  musik.c  musik.h  render.c  render.h  terminal.c  terminal.h  utility.c  utility.h
src/Windows/: errors.inc  libc.inc  miniaudio.inc  musik.asm  structs.inc  terminal.inc  utility.inc  winapi.inc
src/terminal/: term_posix.c  term_windows.c  term_windows.h  terminal.h  terminal.zig  terminal_windows.c  windows.zig
